Further work on adding angular interface

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -2,9 +2,9 @@
       class="form-horizontal"
       ng-submit="form.$valid && cbSubmit( { record: record } )"
       novalidate>
-  <div class="modal-body" ng-transclude></div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+  <div class="form-body" ng-transclude></div>
+  <div class="form-footer rounded-bottom">
+    <button type="button" class="btn btn-default" ng-click="cbBack()">Cancel</button>
     <button type="submit" class="btn btn-primary">
       <i class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></i> Save
     </button>
