--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -1,13 +1,13 @@
 <form name="form"
       class="form-horizontal"
       novalidate>
-  <div class="modal-body" ng-transclude></div>
-  <div class="modal-footer">
+  <div class="form-body" ng-transclude></div>
+  <div class="form-footer rounded-bottom">
     <button type="button" class="btn btn-danger"
-            ng-really-message="Are you sure you want to delete this {{ subject.singular }}?"
+            ng-really-message="Are you sure you want to delete this {{ name.singular }}?"
             cn-really-click="cbDelete()">
       <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i> Delete
     </button>
-    <button type="button" class="btn btn-default btn-primary" data-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-default btn-primary" ng-click="cbBack()">Back</button>
   </div>
 </form>
