--- a/web/app/site/add.tpl.html
+++ b/web/app/site/add.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>Create A New Site</h4></div>
 <cn-record-add cb-submit="cbSubmit( record )">
   <cn-record-input form="form" subject="site" key="name" title="Name">
     <input name="name"
