--- a/web/app/site/list.tpl.html
+++ b/web/app/site/list.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>Site List</h4></div>
 <cn-record-list subject="site"
                 local="local.cnList"
                 cb-add="cbAdd()"
