--- a/web/app/site/view.tpl.html
+++ b/web/app/site/view.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>Viewing Site Details</h4></div>
 <cn-record-view subject="local.subject" cb-delete="cbDelete()">
   <cn-record-input form="form" subject="site" key="name" title="Name">
     <input name="name"
