--- a/web/app/user/list.tpl.html
+++ b/web/app/user/list.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>User List</h4></div>
 <cn-record-list subject="user"
                 local="local.cnList"
                 cb-add="cbAdd()"
