--- a/web/app/user/add.tpl.html
+++ b/web/app/user/add.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>Create A New User</h4></div>
 <cn-record-add cb-submit="cbSubmit( record )">
   <cn-record-input form="form" subject="user" key="name" title="Name">
     <input name="name"
@@ -9,12 +10,12 @@
            autocomplete="off"
            required /></div>
   </cn-record-input>
-  <cw-record-input form="form" subject="appointment" key="active" title="Active">
+  <cn record-input form="form" subject="user" key="active" title="Active">
     <select name="active"
             ng-model="record.active"
             class="form-control">
       <option value="1" selected>Yes</option>
       <option value="0">No</option>
     </select>
-  </cw-record-input>
+  </cn-record-input>
 </cn-record-add>
