--- a/web/app/user/view.tpl.html
+++ b/web/app/user/view.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>Viewing User Details</h4></div>
 <cn-record-view subject="local.subject" cb-delete="cbDelete()">
   <cn-record-input form="form" subject="user" key="name" title="Name">
     <input name="name"
@@ -10,12 +11,12 @@
            autocomplete="off"
            required />
   </cn-record-input>
-  <cw-record-input form="form" subject="appointment" key="active" title="Active">
+  <cn-record-input form="form" subject="user" key="active" title="Active">
     <select name="active"
             ng-model="record.active"
             class="form-control">
       <option value="1" selected>Yes</option>
       <option value="0">No</option>
     </select>
-  </cw-record-input>
+  </cn-record-input>
 </cn-record-view>
