Tweaking interface (animation, layout, css, etc)

--- a/web/app/cenozo/site-role-picker.tpl.html
+++ b/web/app/cenozo/site-role-picker.tpl.html
@@ -1,6 +1,6 @@
 <div class="btn-group full-width">
   <div class="btn-group half-width" dropdown>
-    <button type="button" class="btn btn-info full-width" dropdown-toggle>
+    <button type="button" class="btn btn-info rounded-left full-width" dropdown-toggle>
       {{ site.name }}
       <i class="caret"></i>
     </button>
@@ -9,7 +9,7 @@
     </ul>
   </div>
   <div class="btn-group half-width" dropdown>
-    <button type="button" class="btn btn-info full-width" dropdown-toggle>
+    <button type="button" class="btn btn-info rounded-right full-width" dropdown-toggle>
       {{ role.name | cnUCWords }}
       <i class="caret"></i>
     </button>
