--- a/web/app/language/view.tpl.html
+++ b/web/app/language/view.tpl.html
@@ -1,12 +1,13 @@
 <div class="container-fluid bg-primary rounded-top"><h4>Viewing Language Details</h4></div>
-<cn-record-view subject="local.subject" cb-delete="cbDelete()">
-  <cn-record-input form="form" subject="language" key="id" title="ID">
-    <input name="id"
-           ng-model="record.id"
-           class="form-control"
-           type="text"
-           placeholder="ID"
-           autocomplete="off"
-           required /></div>
-  </cn-record-input>
-</cn-record-view>
+  <cn-record-view form="form" list-model="cnList" view-model="cnView">
+    <cn-record-input form="form" key="id" title="ID">
+      <input name="id"
+             ng-model="record.id"
+             class="form-control"
+             type="text"
+             placeholder="ID"
+             autocomplete="off"
+             required /></div>
+    </cn-record-input>
+  </cn-record-view>
+</form>
