--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -1,12 +1,7 @@
-<form name="form"
-      class="form-horizontal"
-      ng-submit="form.$valid && cbSubmit( { record: record } )"
-      novalidate>
-  <div class="form-body" ng-transclude></div>
-  <div class="form-footer rounded-bottom">
-    <button type="button" class="btn btn-default" ng-click="cbBack()">Cancel</button>
-    <button type="submit" class="btn btn-primary">
-      <i class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></i> Save
-    </button>
-  </div>
-</form>
+<div class="form-body" ng-transclude></div>
+<div class="form-footer rounded-bottom">
+  <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
+  <button type="button" class="btn btn-primary" ng-click="form.$valid && submit()">
+    <i class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></i> Save
+  </button>
+</div>
