--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -1,13 +1,9 @@
-<form name="form"
-      class="form-horizontal"
-      novalidate>
-  <div class="form-body" ng-transclude></div>
-  <div class="form-footer rounded-bottom">
-    <button type="button" class="btn btn-danger"
-            ng-really-message="Are you sure you want to delete this {{ name.singular }}?"
-            cn-really-click="cbDelete()">
-      <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i> Delete
-    </button>
-    <button type="button" class="btn btn-default btn-primary" ng-click="cbBack()">Back</button>
-  </div>
-</form>
+<div class="form-body" ng-transclude></div>
+<div class="form-footer rounded-bottom">
+  <button type="button" class="btn btn-danger"
+          ng-really-message="Are you sure you want to delete this {{ viewModel.subject }}?"
+          cn-really-click="delete()">
+    <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i> Delete
+  </button>
+  <button type="button" class="btn btn-default btn-primary" ng-click="back()">Back</button>
+</div>
