--- a/web/app/collection/add.tpl.html
+++ b/web/app/collection/add.tpl.html
@@ -1,37 +1,39 @@
 <div class="container-fluid bg-primary rounded-top"><h4>Create A New Collection</h4></div>
-<cn-record-add cb-submit="cbSubmit( record )">
-  <cn-record-input form="form" subject="collection" key="name" title="Name">
-    <input name="name"
-           tooltip="May only contain letters, numbers and underscores."
-           ng-model="record.name"
-           class="form-control"
-           type="text"
-           autocomplete="off"
-           required /></input>
-  </cn-record-input>
-  <cn-record-input form="form" subject="collection" key="active" title="Active">
-    <select name="active"
-            tooltip="Inactive collections will not show as options in reports or to external applications."
-            ng-model="record.active"
-            class="form-control">
-      <option value="1">Yes</option>
-      <option value="0">No</option>
-    </select>
-  </cn-record-input>
-  <cn-record-input form="form" subject="collection" key="locked" title="Locked">
-    <select name="locked"
-            tooltip="If locked then only users in the access list will be able to make changes to the collection."
-            ng-model="record.locked"
-            class="form-control">
-      <option value="1">Yes</option>
-      <option value="0">No</option>
-    </select>
-  </cn-record-input>
-  <cn-record-input form="form" subject="collection" key="description" title="Description">
-    <textarea name="description"
-              ng-model="record.description"
-              class="form-control"
-              type="text"
-              /></textarea>
-  </cn-record-input>
-</cn-record-add>
+<form name="form" class="form-horizontal" novalidate>
+  <cn-record-add form="form" list-model="cnList" add-model="cnAdd">
+    <cn-record-input form="form" key="name" title="Name"
+      help="May only contain letters, numbers and underscores.">
+      <input name="name"
+             ng-model="record.name"
+             class="form-control"
+             type="text"
+             autocomplete="off"
+             required /></input>
+    </cn-record-input>
+    <cn-record-input form="form" key="active" title="Active"
+       help="Inactive collections will not show as options in reports or to external applications.">
+      <select name="active"
+              ng-model="record.active"
+              class="form-control">
+        <option value="1">Yes</option>
+        <option value="0">No</option>
+      </select>
+    </cn-record-input>
+    <cn-record-input form="form" key="locked" title="Locked"
+       help="If locked then only users in the access list will be able to make changes to the collection.">
+      <select name="locked"
+              ng-model="record.locked"
+              class="form-control">
+        <option value="1">Yes</option>
+        <option value="0">No</option>
+      </select>
+    </cn-record-input>
+    <cn-record-input form="form" key="description" title="Description">
+      <textarea name="description"
+                ng-model="record.description"
+                class="form-control"
+                type="text"
+                /></textarea>
+    </cn-record-input>
+  </cn-record-add>
+</form>
