--- a/web/app/quota/add.tpl.html
+++ b/web/app/quota/add.tpl.html
@@ -1,12 +1,14 @@
 <div class="container-fluid bg-primary rounded-top"><h4>Create A New Quota</h4></div>
-<cn-record-add cb-submit="cbSubmit( record )">
-  <cn-record-input form="form" subject="quota" key="id" title="ID">
-    <input name="id"
-           ng-model="record.id"
-           class="form-control"
-           type="text"
-           placeholder="ID"
-           autocomplete="off"
-           required /></div>
-  </cn-record-input>
-</cn-record-add>
+<form name="form" class="form-horizontal" novalidate>
+  <cn-record-add form="form" list-model="cnList" add-model="cnAdd">
+    <cn-record-input form="form" key="id" title="ID">
+      <input name="id"
+             ng-model="record.id"
+             class="form-control"
+             type="text"
+             placeholder="ID"
+             autocomplete="off"
+             required /></div>
+    </cn-record-input>
+  </cn-record-add>
+</form>
