--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -1,7 +1,9 @@
-<div class="form-body" ng-transclude></div>
-<div class="form-footer rounded-bottom">
-  <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
-  <button type="button" class="btn btn-primary" ng-click="form.$valid && submit()">
-    <i class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></i> Save
-  </button>
-</div>
+<form name="form" class="form-horizontal" novalidate>
+  <div class="form-body" ng-transclude></div>
+  <div class="form-footer rounded-bottom">
+    <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
+    <button type="button" class="btn btn-primary" ng-click="form.$valid && submit()">
+      <i class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></i> Save
+    </button>
+  </div>
+</form>
