--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>{{ heading }}</h4></div>
 <table class="table table-striped" ng-class="{ 'table-hover': listModel.viewEnabled } ">
   <thead>
     <tr class="info">
