--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid bg-primary rounded-top"><h4>{{ heading }}</h4></div>
 <form name="form" class="form-horizontal" novalidate>
   <div class="form-body" ng-transclude></div>
   <div class="form-footer rounded-bottom">
