--- a/web/app/site/add.tpl.html
+++ b/web/app/site/add.tpl.html
@@ -1,24 +1,21 @@
-<div class="container-fluid bg-primary rounded-top"><h4>Create A New Site</h4></div>
-<form name="form" class="form-horizontal" novalidate>
-  <cn-record-add form="form" list-model="cnList" add-model="cnAdd">
-    <cn-record-input form="form" key="name" title="Name">
-      <input name="name"
-             ng-model="record.name"
-             class="form-control"
-             type="text"
-             ng-minlength="3"
-             ng-maxlength="45"
-             placeholder="Name"
-             autocomplete="off"
-             required /></div>
-    </cn-record-input>
-    <cn-record-input form="form" key="timezone" title="Time Zone">
-      <select name="timezone"
-              ng-model="record.timezone"
-              class="form-control"
-              required>
-        <option ng-repeat="option in local.metadata.timezoneList" value="{{ option }}">{{ option }}</option>
-      </select>
-    </cn-record-input>
-  </cn-record-add>
-</form>
+<cn-record-add list-model="cnList" add-model="cnAdd">
+  <cn-record-input form="form" key="name" title="Name">
+    <input name="name"
+           ng-model="record.name"
+           class="form-control"
+           type="text"
+           ng-minlength="3"
+           ng-maxlength="45"
+           placeholder="Name"
+           autocomplete="off"
+           required /></div>
+  </cn-record-input>
+  <cn-record-input form="form" key="timezone" title="Time Zone">
+    <select name="timezone"
+            ng-model="record.timezone"
+            class="form-control"
+            required>
+      <option ng-repeat="option in local.metadata.timezoneList" value="{{ option }}">{{ option }}</option>
+    </select>
+  </cn-record-input>
+</cn-record-add>
