--- a/web/app/system_message/add.tpl.html
+++ b/web/app/system_message/add.tpl.html
@@ -1,14 +1,11 @@
-<div class="container-fluid bg-primary rounded-top"><h4>Create A New System Message</h4></div>
-<form name="form" class="form-horizontal" novalidate>
-  <cn-record-add form="form" list-model="cnList" add-model="cnAdd">
-    <cn-record-input form="form" key="id" title="ID">
-      <input name="id"
-             ng-model="record.id"
-             class="form-control"
-             type="text"
-             placeholder="ID"
-             autocomplete="off"
-             required /></div>
-    </cn-record-input>
-  </cn-record-add>
-</form>
+<cn-record-add list-model="cnList" add-model="cnAdd">
+  <cn-record-input form="form" key="id" title="ID">
+    <input name="id"
+           ng-model="record.id"
+           class="form-control"
+           type="text"
+           placeholder="ID"
+           autocomplete="off"
+           required /></div>
+  </cn-record-input>
+</cn-record-add>
